Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-455

LogLog::setQuietMode(true) does not suppress exception reporting

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Trivial
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • None
    • None

    Description

      LogLog::setQuietMode(true) suppresses error reporting but not exceptions associated with the errors.

      I discovered this while working with a configuration that uses org.org.apache.log4j.net.SocketAppender. If there is no log4j consumer running for the socket, log4cxx was reporting the following using loglog:

      log4cxx: Could not connect to remote log4cxx server at [server-name]. We will try again later.
      log4cxx: IO Exception : status code = 730061

      I used LogLog::setQuietMode(true) to suppress this, but the exception was still reported without the error text:

      log4cxx: IO Exception : status code = 730061

      Attachments

        Activity

          People

            Unassigned Unassigned
            BDeFrang Bruce DeFrang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: