Changed the implementation to handle "quietMode" always. That has been the requested behaviour in LOGCXX-455 and it seems to simply make sense to handle that always at one place.

https://issues.apache.org/jira/projects/LOGCXX/issues/LOGCXX-455